<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rakhwala</string>

    <!-- Main Activity -->
    <string name="welcome_back">Welcome back,</string>
    <string name="how_you_feel">How Do You Feel Today?</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="happy">Happy</string>
    <string name="sos">SOS</string>
    <string name="location_services">Location Services</string>
    <string name="share_live_location">Share Live Location</string>
    <string name="track_location">Track Location</string>
    <string name="find_safe_route">Find Safe Route</string>
    <string name="google_autocomplete_key">AIzaSyCLrsykqlGt-DZGgF6pnwJY8cuB7K8UoR8</string>
</resources>